--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
         <a href="https://www.youtube.com/@joel_450" class="footer__icon"><i class='bx bxl-youtube' ></i></a>
         <a href="https://x.com/JoeCastro8873" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
         <a href="https://wa.me/254719526107" class="footer__icon"><i class='bx bxl-whatsapp' ></i></a>
-        <!-- Added new social links -->
+        <a href="mailto: joelwanjala09@gmail.com" class="footer__icon"><i class='bx bxl-email' ></i></a>
         <a href="https://www.linkedin.com/in/wajoel" class="footer__icon" target="_blank"><i class='bx bxl-linkedin'></i></a>
         <a href="https://www.behance.net/wajoel" class="footer__icon" target="_blank"><i class='bx bxl-behance' ></i></a>
         <a href="https://github.com/wajoel" class="footer__icon" target="_blank"><i class='bx bxl-github' ></i></a>
     </div>
-    <p class="footer__copy">&#169; WJ All rights reserved</p>
+    <p class="footer__copy">&#169; JM all Rights Reserved</p>
 </footer>
 
 
