My personal portfolio website

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
             <a href="assets/resume/wajoel_cv.pdf" class="btn btn-primary" target="_blank">Download Resume</a>
           </li>
 
-          <!-- <li>
-            <a href="https://gathuh.github.io/gathuportfolio/" class="btn btn-primary" data-nav-link target="_blank">Portfolio Website</a>
-          </li> -->
+          
 
         </ul>
       </nav>
@@ -104,7 +102,7 @@
 
           <div class="hero-banner">
 
-            <img src="./assets/images/wajoel_photo.png" width="800" height="864" loading="lazy" alt="Gathu's Photo"
+            <img src="./assets/images/wajoel_photo.png" width="800" height="864" loading="lazy" alt="Joel's Photo"
               class="img-cover">
 
             --<div class="elem elem-1">
