My personal portfolio website

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <h2 class="h2 section-title"> </h2>
 
                 <p class="section-text">
-                  Statistics and Actuarial science graduate, currently awaiting formal certification, with expertise in statistical modeling,
+                  Statistics and Actuarial science graduate with expertise in statistical modeling,
                   predictive analytics, and financial risk management, particularly in real-world financial applications.
                 </p>
                 <p class="section-text">
@@ -267,7 +267,7 @@
 
                   <p class="card-subtitle">Customer Segmentation</p>
 
-                  <h3 class="h3 card-title">A clustering model using K-means, hierarchical clustering, and PCA in R to segment customers based on behavioral patterns.</h3>
+                  <h3 class="h3 card-title">A clustering model using K-means, hierarchical clustering, and PCA to segment customers based on behavioral patterns.</h3>
 
                   <span class="btn-link">
                     <span>View on GitHub</span>
@@ -285,7 +285,7 @@
 
                   <p class="card-subtitle">Stock Price Prediction</p>
 
-                  <h3 class="h3 card-title">A time series model using ARIMA, LSTM, and XGBoost in R to forecast stock prices.</h3>
+                  <h3 class="h3 card-title">A time series model using ARIMA, LSTM, and XGBoost to forecast stock prices.</h3>
 
                   <span class="btn-link">
                     <span>View on GitHub</span>
@@ -303,7 +303,7 @@
 
                   <p class="card-subtitle">Claims Fraud Detection</p>
 
-                  <h3 class="h3 card-title">A machine learning model using logistic regression, random forests, and XGBoost in R to identify fraudulent insurance claims.</h3>
+                  <h3 class="h3 card-title">A machine learning model using logistic regression, random forests, and XGBoost to identify fraudulent insurance claims.</h3>
 
                   <span class="btn-link">
                     <span>View on GitHub<span>
