My personal portfolio website

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             <p class="hero-text">
               
-              Statistics, Mathematics, Programming, Actuarial Science, Data Science, Data & Business Analytics, Big Data, Machine Learning, Artificial Intelligence, Finance, Economics, Insurance, Pensions, and Investment.
+              Statistics, Mathematics, Programming, Actuarial Science, Data Science, Data & Business Analytics, Data and Cloud Engineering, Big Data, Web Development, Machine Learning, Artificial Intelligence, Finance, Economics, Insurance, Pensions, and Investment.
 
             </p>
 
@@ -380,8 +380,20 @@
             </li>
 
             <li class="skills-item">
-              <div class="wrapper" style="width: 80%">
+              <div class="wrapper" style="width: 75%">
                 <h3 class="skills-title">HTML</h3>
+
+                <data class="skills-data" </data>
+              </div>
+
+              <div class="skills-progress-box">
+                <div class="skills-progress" style="width: 75%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="wrapper" style="width: 80%">
+                <h3 class="skills-title">CSS</h3>
 
                 <data class="skills-data" </data>
               </div>
@@ -390,18 +402,7 @@
                 <div class="skills-progress" style="width: 80%"></div>
               </div>
             </li>
-
-            <li class="skills-item">
-              <div class="wrapper" style="width: 75%">
-                <h3 class="skills-title">CSS</h3>
-
-                <data class="skills-data" </data>
-              </div>
-
-              <div class="skills-progress-box">
-                <div class="skills-progress"></div>
-              </div>
-            </li>
+            
             <li class="skills-item">
               <div class="wrapper" ">
                 <h3 class="skills-title">Power Bi</h3>
